can get geolocation from google api

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Welcome to SkyCast, the new way to read your local weather! </p>
-<a href="/home">Login</a></p>
+<a href="/home">Get Started!</a></p>
 </body>
 </html>
